--- a/vmAdminScripts/.machines-config
+++ b/vmAdminScripts/.machines-config
@@ -1,6 +1,7 @@
 cfg_vms=(IyV-01 IyV-02 IyV-dr)
 cfg_vm_ips=(iyv01 iyv02 iyvdr)
 cfg_vm_ip_numbers=(192.168.11.201 192.168.11.202 192.168.11.203)
+cfg_vm_suffixes=(01 02 dr)
 cfg_features=(db app)
 cfg_admin_user=admin
 cfg_admin_passwd=admin
